# ChangeLog for dev-python/pyGPG
# Copyright 2012-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyGPG/ChangeLog,v 1.7 2015/01/13 06:15:13 steev Exp $

  12 Jan 2015; Steev Klimaszewski <steev@gentoo.org> pyGPG-0.1.ebuild:
  Add ~arm keyword

*pyGPG-0.1 (08 Jan 2015)

  08 Jan 2015; Brian Dolbec <dolsen@gentoo.org> +pyGPG-0.1.ebuild,
  pyGPG-9999.ebuild:
  First release, adjust gnupg dep.

  22 Dec 2014; Brian Dolbec <dolsen@gentoo.org> pyGPG-9999.ebuild:
  Update python comatibilty, added 3.3, 3.4

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> pyGPG-9999.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  17 Dec 2012; Michał Górny <mgorny@gentoo.org> pyGPG-9999.ebuild:
  Bump to EAPI=5 to make Paludis happy, bug #447524.

  19 Nov 2012; Brian Dolbec <dolsen@gentoo.org> pyGPG-9999.ebuild:
  fix an errant space in the ebuild.

*pyGPG-9999 (18 Nov 2012)

  18 Nov 2012; Brian Dolbec <dolsen@gentoo.org> +pyGPG-9999.ebuild,
  +metadata.xml:
  Initial ebuild for pyGPG, written by me.