@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST pyGPG-0.1.tar.gz 15441 SHA256 c699192606652ebe1a369770d00110baa490c74c3d858ad0513ec55f315e7735 SHA512 58a89fbee4311b89c5515ad1bc1d901057e8acdfdbcf36813f50a766374100a62efe456d52263711e5c2f46957791def9343d94f019e413506cfdbd353602060 WHIRLPOOL 24862897737516945cdc8e41ced589f4ef4b64cdd4a92ddae22c07e9252c0cf8779b685b6cd35fac5b3244d0000d9bade98d661c67ac904639ebc142281551c1
-EBUILD pyGPG-0.1.ebuild 1103 SHA256 dbbac550c526fda28f78f50c7240acddab6a1f11eaf29be527d0ddb4ec9a940a SHA512 104a8b754d36289fe64b834e3e2c15581ce3d96d112229245e31c089e9197c713414e1473caf86cc47c60f65da14882ef8443dc8e28d9c7c34429650eb7567e3 WHIRLPOOL 6bce147fa3be437da25014599672d508529e040d399663b2e57fbba361dd2d6b414588512045b4fa4ad21eebb3d572c457b8ce5e1e5f7266fdc9adc2595f2ec8
+EBUILD pyGPG-0.1.ebuild 1107 SHA256 15fc7e1e22b05b6ec38a37e2b15a7148fb1e9936688b69ebe16189959e13911e SHA512 102af96399aa101fee75c419a745528b1abdda588eb8f86557a0812dbecbacb542ba9f848db979ee64eb383c8e34826e2f010bdf2680dd4cee1a9bec1ac2635f WHIRLPOOL 3e13d419a7a88056659078b2175ea1708f3300ee1246ed5b53b1cd242fcd15ebde2321205e48c74638a9bb010b31d742ce1ec0670829e31a49db36f3c18fcc47
 EBUILD pyGPG-9999.ebuild 1130 SHA256 3febe6dc61c3539d9948b1061e3eb61844d93580bcf86e18c27e693783265893 SHA512 9ac97bdccd9f0fa9c61fd69bc5a84b05518cc0ad136752081a16876d9473d8e26d9a416757b34ec215b96b20dfc435aadbe954b828eb4aff107dbc0c0f337b3c WHIRLPOOL e25a93167259f584f9219bbcb29d19e5c4ecaf081f3792aaed5ef0c6c9ad97af40f71b3605e0f190a43747f3be1d52f7c5531803c4a8e46d5b755d8c40cd1752
-MISC ChangeLog 1061 SHA256 0d96e50cd2481eed007c2230c59a7da69a1de23d58ff4bd9c09f3a6afea8d4fc SHA512 298e79f518330f5312ec75a5140a87bdfad57662ecbf59153115ba9d080adc40611d96a052bbaf8570be3bc740dc5c86bc7e44541cd07bcd255c061c62142d63 WHIRLPOOL 03ae64b942531ccb2e15ac1f55d51105aa696383cd8de301179ff4234e1a685356fc014aeed03943918062bc1703c3fea5a68a3a4c71f2ea724b15894f71165c
+MISC ChangeLog 1155 SHA256 cd9b941be9fa08ae86ab8be6ec23ab1e94d78564a55ad568d3c3c001a0509524 SHA512 294837f6f550f82a0c25d99255d3cb9044d80248a9e130709ce35d1b79313051b3dadc547d0c43c3c2c86f1a9beeba4d16dfca9933761c9b9d8cba1008967a04 WHIRLPOOL 8af0cc2a3deb6dda65b0ca28d544ba24edb4f60db1b40a512c68947642040114a46cc29e731331cf504e04276d707813dbe01e0f0a5153ac08b3c805074162c1
 MISC metadata.xml 481 SHA256 09020a8c3bd6bfdaa05d879c318e83d5740c5d873f2b4c8c9988023d5ed7a61b SHA512 f8876a25bb319e145d8c3c13aa99cfa1698fd00b2f28d231cbd35821a00f7133c4a8ef90afcc973d65813a70aaf2e91ce9231a2d63e9f45b3fb1510f0b19bf5a WHIRLPOOL 4fc1c5a25baa43463273b921eaaaa92cdf65e6381bf32f1e694284236fc308142dcb624f81804ea6258dcf3d0fb94b0d54481c3e9e42a3d110c3564171ce9b3d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlTYnUkACgkQVWmRsqeSphPcuQCeIL8b2q5Od9auFX5nWH7mgsuY
+cMcAn0Azt7lATfsH+kwgCvOv0lrS9w5u
+=AVV2
+-----END PGP SIGNATURE-----
