@@ -4,11 +4,11 @@ DESCRIPTION=Graphical IRC client based on XChat
 EAPI=5
 HOMEPAGE=http://hexchat.github.io/
 IUSE=dbus +gtk ipv6 libcanberra libnotify libproxy nls ntlm perl +plugins plugin-checksum plugin-doat plugin-fishlim plugin-sysinfo python spell ssl theme-manager python_targets_python3_3 python_targets_python3_4 python_targets_python2_7 python_single_target_python3_3 python_single_target_python3_4 python_single_target_python2_7
-KEYWORDS=~alpha ~amd64 arm hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux
+KEYWORDS=~alpha amd64 arm hppa ~ia64 ~ppc ~ppc64 ~sparc x86 ~amd64-linux
 LICENSE=GPL-2 plugin-fishlim? ( MIT )
 RDEPEND=dev-libs/glib:2 dbus? ( >=dev-libs/dbus-glib-0.98 ) gtk? ( x11-libs/gtk+:2 ) libcanberra? ( media-libs/libcanberra ) libproxy? ( net-libs/libproxy ) libnotify? ( x11-libs/libnotify ) nls? ( virtual/libintl ) ntlm? ( net-libs/libntlm ) plugins? ( perl? ( >=dev-lang/perl-5.8.0 ) plugin-sysinfo? ( sys-apps/pciutils ) python? ( python_single_target_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) python_single_target_python3_4? ( dev-lang/python:3.4 ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python3_3(-)?,python_targets_python3_4(-)?,python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),python_single_target_python3_3(+)?,python_single_target_python3_4(+)?,python_single_target_python2_7(+)?] ) ) spell? ( app-text/iso-codes ) ssl? ( dev-libs/openssl:0 ) theme-manager? ( dev-lang/mono ) spell? ( app-text/enchant )
 REQUIRED_USE=plugins? ( python? ( ^^ ( python_single_target_python3_3 python_single_target_python3_4 python_single_target_python2_7 ) python_single_target_python3_3? ( python_targets_python3_3 ) python_single_target_python3_4? ( python_targets_python3_4 ) python_single_target_python2_7? ( python_targets_python2_7 ) ) )
 SLOT=0
 SRC_URI=https://dl.hexchat.net/hexchat/hexchat-2.10.2.tar.xz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	mono-env	59ca1177366cc9e14521d3501e9bb281	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-single-r1	ed2ee20dc74a34be60f5b1b500e92a5b	python-utils-r1	7d5f4ad9ba85664d8c5f56041a70f4c3	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=8652d09a61cf1ca61792ddb25ebae7ea
+_md5_=ad8861aa878a76eb1c93e1cf18c140aa
