@@ -18,18 +18,22 @@ DIST hexchat-2.9.5.tar.xz 1309112 SHA256 11dfd0fbfb88d8dbb38f631fab8a7dffbb179f7
 DIST hexchat-2.9.6.1.tar.xz 1768392 SHA256 6267ff3c4d0aec8a808365b384115a769d5001d99dbb10403634667c43966470 SHA512 73a7c2818b9d59a62c2471b9010cd04a6a5ac85b22d5158fdc27831d8700f09eb3011aac341866b76d7a4efe483f59de9c7b6d9a983916ccfbf8e61db81ea195 WHIRLPOOL 900995d8add17ce93da6ec284992a5ddf7dbc086d59ca307e362e485a8b00a6f57bdec43ee4a44c7733539ae9146ffd4b7cb51a75e3076e76c4440755d2c01a9
 EBUILD hexchat-2.10.0-r1.ebuild 4541 SHA256 f5e3f15a02345deb24e5ec30f45a16c69f8125c0d23bcd6febbf43b5fc72bcb6 SHA512 4dd92e4ead4105837ba020d65f3365d6073c96a819effbee39719f4479ac6889941f5a79eba0bd5e404022c01bce7220d25239170f514afa5ab596262886212c WHIRLPOOL 7651d0e313d4ab47f9f1ef9df4c0d265bd2911acf8abd539b4c55f72d8fd64b72f7053d3d2ccb51aae58af369b82f27eb44201304236f6478cbbf8d0ef7188a5
 EBUILD hexchat-2.10.1.ebuild 4452 SHA256 8263c9f94162887b5a3229895f68acb74112e8d1ccef74023b22575a9e6e4667 SHA512 b3f4e2874568324d08304472dece20543922a7a6dfa755e0e0d0cc1d9b32c86930856ba3cbb9fb07b959a3dbff4336b3316bdae45140feaf2b90aed01235ebfd WHIRLPOOL fa763459a9aa256f42376951d251e4c1e94b450c6e661d70cfa26a1b3762dfe25f037ffcfafb0373cf212a14c13756cc7bf7a990076a1d02bade78272bdc7c74
-EBUILD hexchat-2.10.2.ebuild 4457 SHA256 8812b91a104593de6957106653926d63a9c5b0a5b1d94b7af63dd5c3b5c560eb SHA512 b45789e8c839f41f07c5f0cf8c62392f62635ae276e0b8b36113b015d254fb5225065c756cf59ead02099268f05715d448f5deefa83d131d9f3565197234f31b WHIRLPOOL 9b701ca784ba36125aca63564382c05126c397bd9d55b441569231f4c5f5e2af466f384ce80306af0bed99ba1f34a0d3763ca33c29bc84c13d48d2dd5f0b53c8
+EBUILD hexchat-2.10.2.ebuild 4457 SHA256 397214a9fbd877081e1c14e4128b6c8798cf7932a49c759037b80afbdfb3f0b6 SHA512 02c846fe82f393735bd846444acf1399f66bef43d72b043b870caf877552883e3382faeddf39f96b954a40f10b1fb4eda1cbafaa52795ac7ae59fcfe30f0edfa WHIRLPOOL 7f4d1a1f033c5654e1eb2ce38b07e4a4b34c81291b85f61c51b6481f005562bfc15457b5a6fe19cabeff18a4bae782981cfd09dae78bb7c7548b1af5845829ea
 EBUILD hexchat-2.9.5-r1.ebuild 4054 SHA256 4040f7e7a6f5c41d8a4168d398ec99d9f85887fa532c919fec0d827087fe1d46 SHA512 8cae41d239571b3070d91bb1a08f2a308a05effda8eb8e2369cbb35b3ca144eeca79c352243129376780c77346deaf03077d38cb3066e48a566ed73abc0c01d0 WHIRLPOOL 299edd135a4c419a864b86a16d78c184a91685f01ccd3a46521b52052436ca3b022cd1230179323cc0bea357fdb325b0ff75a8902e6876888fca54612a783b13
 EBUILD hexchat-2.9.6.1-r1.ebuild 4667 SHA256 be4ee3547ff5e9e89057bd66517f8000d6a15d829d1f70c43240fff54035266f SHA512 b2c9df530c08e77db988e237f877cf71325e96b686e59af150c135a445510f96e51375537c9bf4ffc54278972f43fd0dab34aeba9b49290637f59eb15f465697 WHIRLPOOL c1bb6b230d24d77327b4403c7578389ff66c05ff9fa6b5694e376f207ba53b264678409b4b16e2cae85e3b3bc7a039cd56e13419575ed1398f6856d5f05eebc5
 EBUILD hexchat-2.9.6.1-r2.ebuild 4663 SHA256 f1ee79c491f94d1771927d015e51433f61a7a27a77b5a45e6b6078427f422e10 SHA512 7bd8b6ca1145d69091ee861cb6beb528c810d8b500504cf627f63d447ee15b1cc4ee10b6d96caab4fc575b4701c7a5b21e18ac16ea7c6c9ea18b4c09fc57079f WHIRLPOOL d4f28ea82290a0e0d7c96f5a1277444ffb138d7d46f645cccdeae81882a0887762b76ea770cb743814c33c18247688f18f15a0d0d402c88e4bf255fa89d5269d
 EBUILD hexchat-2.9.6.1.ebuild 4628 SHA256 8259557004b4d2a7c3ef8f43c52de998e0921b2d1687f83ba179dc475b2e09a6 SHA512 d9e921f6c4abe9db0b38a606ef7eb6347d3a0fadde60456bf42b08d0aeb299d9ede8b428823bd93f6eb553aabedf99b139ab9eb27720d66b76edbfab87101fad WHIRLPOOL f311c79970c5b3605d3d31253bcbda7c5a50917d0c23c710cea78e991ab28208fe46c32ed80409f290be2c37cf2a74eecfd3e48676fb97c36fd77dd9fa2b40f0
 EBUILD hexchat-9999.ebuild 4885 SHA256 b717934ff9d69c8e31cfa18f3557fc99b509d62081407f4f7b8c41fb97b20b77 SHA512 b81ee669ddf27928adc0a77901bdc83dd46b2c86a7875427d592251450c303c0ad92fa30d160905032a6ad3de747eaf088fa561d3fc727b76140456b5a59666d WHIRLPOOL 19eb9c521a6dcbfe0d5218973823189bef16da74c756e8f2c85f5859957e5ba5138ad38de702f4460c440c42ef7d1688f1b78d7a112ce14bc3ff165c6f79422d
-MISC ChangeLog 14932 SHA256 d8f8d39ff003a4ccbdcf26b8d870b46c840961d86f6ea4d8b5e6441443810f0f SHA512 f0558a61c188d1685f07f091cdb0e50507de699cd4d0da514c696b629538f597bc2f9e29cc346b2906461d667ba99267f0ef0122b2ff10bf9452e9d2891f7dab WHIRLPOOL 6b579f709959c16d1f75203ee2e2e08f9f81d81774ddf509594596216622a828f97abbe3ad71f646a6af8ae2465ccc7c8489170914d882e1dd25b0e6259e5a43
+MISC ChangeLog 15051 SHA256 c2b4c57b69dda3f0c187043d93f19885717ca61453a53e98c659f85373c6f3bc SHA512 5cd7c42e840044816674619671ca1a82d443c3e371380274a7e61d90ff7dc83c44d96cfcff38c2914911802c03a60fc25a2537ee3df5c08ca7332c79734ff0a0 WHIRLPOOL 2243d866d093fd9e3c24743696b5f485677e11ec4b2e79fd762571b982de3b2b060c8a68ee58220ac72d4b3d2c63aa6c47326970abfbfd6bf0432787479eb1ad
 MISC metadata.xml 1857 SHA256 bd8a041c30ade7b290d349fc58ee71943e3441a1fe9e67931bc184de24c14e22 SHA512 5159b41ff8b1ee416c34bf73ea0270b304ec1e65519a41d794e12492a0ddd4cc07fca6ce83827c49e50746393c552485ef39ce5992081108127f9e6311505c7f WHIRLPOOL 442064cee2f98013d3b2d7b1f3f326592202872326d2ef6b2380b5e3906ac7db89b3f29fe062c1045a39b18db628505405cf84a777d67ba733b88076139dea4e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlTX0TYACgkQkKaRLQcq0GI8RgCfZ50z+wSNDyB/V8UUF6Lm7Gfz
-BnsAn3Qw8Vnk/DGFLHmfCKFui1HgV0C+
-=7SBd
+iQEcBAEBCAAGBQJU2KDtAAoJECo/aRed9267kL4IAIpRTWVZAME8qGjoOWp6WWQD
+9cpSaRO8TvI+T2P3J4reD3B2la3YuUoQN68qeaH3xF3yNUkOhE+4iKwzgK8Z7vZ0
+R+ZVFWlpvJM6d2cFhwVj3ju5frCoYCeCER7EPtxQC9QoYBzRTbwJaoxIXbRj4Npd
+7S0jjsgVMyc58WLD/xpuh3QQePrKJBazgdj9xVjN454nPX1QFTly0hl76VFTKvpb
+EoJFhsEN2kp9TNHF4zrqm8K/bGSpNytFDCQFSGCqO0lVKWzXpdvCEXt0DFLbgmaf
+5l1QsONts92ticzPXZuY5T/1E9U6oX6f5mm1uP4CiipoCyReqDSR/n9OUANq9ak=
+=n0Cl
 -----END PGP SIGNATURE-----
