@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/hexchat
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/hexchat/ChangeLog,v 1.113 2015/02/08 21:12:21 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/hexchat/ChangeLog,v 1.114 2015/02/09 11:58:37 pinkbyte Exp $
+
+  09 Feb 2015; Sergey Popov <pinkbyte@gentoo.org> hexchat-2.10.2.ebuild:
+  Stable on amd64 and x86, wrt bug #538228
 
   08 Feb 2015; Markus Meier <maekke@gentoo.org> hexchat-2.10.2.ebuild:
   arm stable, bug #538228
